--- a/src/app/theme/theme.component.html
+++ b/src/app/theme/theme.component.html
@@ -47,7 +47,7 @@
       </div>
       <div class="box four">
             <h2 #title>C'est un titre Quatre moyen mais vrai</h2>
-            <p></p>
+            <p>Il y a toujours un peu de texte !</p>
             <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/36/Two_red_dice_01.svg/330px-Two_red_dice_01.svg.png"
                   alt="Image Quatre">
       </div>
