Add link and tags
Ajout des liens cliquables sur les images et de tags pour les ressources

--- a/src/app/resource/resource.component.css
+++ b/src/app/resource/resource.component.css
@@ -188,7 +188,10 @@
   grid-row: 2;
 }
 
-img {
+.resource-link {
+  margin: 8%;
+}
+.resource-img {
   margin: 8%;
   max-height: 11em;
   max-width: 100%;
