--- a/src/app/resource/resource.component.html
+++ b/src/app/resource/resource.component.html
@@ -2,7 +2,9 @@
       <div *ngFor="let resource of resources; let i = index" class="box" [ngClass]="boxes[i % boxes.length]?.value">
 
             <h2 #title>{{resource.title}}</h2>
-            <p>{{resource.body}}</p>
-            <img src="{{resource.imageUrl}}" alt="Image Un">
+            <p>"boxes[i % boxes.length]?.value" + {{resource.body}}</p>
+            <a class="resource-link" href="{{resource.link}}" target="_blank">
+                  <img class="resource-img" src="{{resource.imageUrl}}" alt="Image Un">
+            </a>
       </div>
 </div>
