--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -32,7 +32,7 @@
         <i class="fa fa-caret-down"></i> <!-- This line of code represents an icon for a downward arrow. -->
         </button>
         <div class="dropdown-content">
-          <a href="#">Link 1</a>
+          <a routerLink="/admin">admin</a>
           <a href="#">Link 2</a>
           <a href="#">Link 3</a>
           <a href="#">Link 4</a>
