update folders and files

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,92 +1,74 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <nav class="navbar navbar-expand-lg navbar-light bg-body-tertiary">
-    <div class="container-fluid">
-      
-      <a class="navbar" href="#">
-        <img
-          src="assets/spiral.png"
-          height="40"
-          alt=""
-          loading="lazy"
-        />
-      </a>
+  <div class="container-fluid">
+
+    <a class="navbar" href="#">
+      <img src="assets/spiral.png" height="40" alt="" loading="lazy" />
+    </a>
 
 
-      <div class="dropdown">
-        <button class="dropbtn" routerLink="/sinformer">{{a}} 
+    <div class="dropdown">
+      <button class="dropbtn" routerLink="/sinformer">{{a}}
         <i class="fa fa-caret-down"></i> <!-- This line of code represents an icon for a downward arrow. -->
-        </button>
-        <div class="dropdown-content">
-          <a href="#">Link 1</a>
-          <a href="#">Link 2</a>
-          <a href="#">Link 3</a>
-          <a href="#">Link 4</a>
-          <a href="#">Link 5</a>
-          <a href="#">Link 6</a>
-        </div>
+      </button>
+      <div class="dropdown-content">
+        <a href="#">Link 1</a>
+        <a href="#">Link 2</a>
+        <a href="#">Link 3</a>
+        <a href="#">Link 4</a>
+        <a href="#">Link 5</a>
+        <a href="#">Link 6</a>
       </div>
-      
-      <div class="dropdown">
-        <button class="dropbtn" routerLink="/reduire">{{b}} 
-        <i class="fa fa-caret-down"></i> <!-- This line of code represents an icon for a downward arrow. -->
-        </button>
-        <div class="dropdown-content">
-          <a routerLink="/admin">admin</a>
-          <a href="#">Link 2</a>
-          <a href="#">Link 3</a>
-          <a href="#">Link 4</a>
-          <a href="#">Link 5</a>
-          <a href="#">Link 6</a>
-        </div>
-      </div> 
+    </div>
 
-      <div class="dropdown">
-        <button class="dropbtn" routerLink="/reutiliser">{{c}} 
+    <div class="dropdown">
+      <button class="dropbtn" routerLink="/reduire">{{b}}
         <i class="fa fa-caret-down"></i> <!-- This line of code represents an icon for a downward arrow. -->
-        </button>
-        <div class="dropdown-content">
-          <a href="#">Link 1</a>
-          <a href="#">Link 2</a>
-          <a href="#">Link 3</a>
-          <a href="#">Link 4</a>
-          <a href="#">Link 5</a>
-          <a href="#">Link 6</a>
-        </div>
+      </button>
+      <div class="dropdown-content">
+        <a routerLink="/admin">admin</a>
+        <a href="#">Link 2</a>
+        <a href="#">Link 3</a>
+        <a href="#">Link 4</a>
+        <a href="#">Link 5</a>
+        <a href="#">Link 6</a>
       </div>
+    </div>
 
-      <div class="dropdown">
-        <button class="dropbtn" routerLink="/substituer">{{d}} 
+    <div class="dropdown">
+      <button class="dropbtn" routerLink="/reutiliser">{{c}}
         <i class="fa fa-caret-down"></i> <!-- This line of code represents an icon for a downward arrow. -->
-        </button>
-        <div class="dropdown-content">
-          <a href="#">Link 1</a>
-          <a href="#">Link 2</a>
-          <a href="#">Link 3</a>
-          <a href="#">Link 4</a>
-          <a href="#">Link 5</a>
-          <a href="#">Link 6</a>
-        </div>
+      </button>
+      <div class="dropdown-content">
+        <a href="#">Link 1</a>
+        <a href="#">Link 2</a>
+        <a href="#">Link 3</a>
+        <a href="#">Link 4</a>
+        <a href="#">Link 5</a>
+        <a href="#">Link 6</a>
       </div>
+    </div>
 
-        <form class="d-flex input-group w-auto">
-          <input
-            type="search"
-            class="form-control"
-            placeholder="Type query"
-            aria-label="Search"
-          />
-          <button
-            data-mdb-ripple-init
-            class="btn btn-outline-primary"
-            type="button"
-            data-mdb-ripple-color="dark"
-          >
-            Recherche
-          </button>
-        </form>
+    <div class="dropdown">
+      <button class="dropbtn" routerLink="/substituer">{{d}}
+        <i class="fa fa-caret-down"></i> <!-- This line of code represents an icon for a downward arrow. -->
+      </button>
+      <div class="dropdown-content">
+        <a href="#">Link 1</a>
+        <a href="#">Link 2</a>
+        <a href="#">Link 3</a>
+        <a href="#">Link 4</a>
+        <a href="#">Link 5</a>
+        <a href="#">Link 6</a>
       </div>
+    </div>
+
+    <form class="d-flex input-group w-auto">
+      <input type="search" class="form-control" placeholder="Type query" aria-label="Search" />
+      <button data-mdb-ripple-init class="btn btn-outline-primary" type="button" data-mdb-ripple-color="dark">
+        Recherche
+      </button>
+    </form>
+  </div>
 </nav>
-
-
-
