redirect to edit resource on title

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -27,7 +27,7 @@
         <i class="fa fa-caret-down"></i> <!-- This line of code represents an icon for a downward arrow. -->
       </button>
       <div class="dropdown-content">
-        <a routerLink="/admin">admin</a>
+        <a [routerLink]="['/admin/resources/', '0', 'edit']">add resource</a>
         <a href="#">Link 2</a>
         <a href="#">Link 3</a>
         <a href="#">Link 4</a>
