--- a/src/app/resources/resource-edit/resource-edit.component.html
+++ b/src/app/resources/resource-edit/resource-edit.component.html
@@ -21,19 +21,23 @@
     <fieldset class="tags-container">
       <legend>Tags:</legend>
       <label>
-        <input type="checkbox" id="sinformer" name="tags" [checked]="isTagSelected('sinformer')" value="sinformer">
+        <input type="checkbox" id="sinformer" name="tags" [(ngModel)]="sinformerChecked"
+          [checked]="isTagSelected('sinformer')" value="sinformer">
         S'informer
       </label>
       <label>
-        <input type="checkbox" id="reduire" name="tags" [checked]="isTagSelected('reduire')" value="reduire">
+        <input type="checkbox" id="reduire" name="tags" [(ngModel)]="reduireChecked"
+          [checked]="isTagSelected('reduire')" value="reduire">
         Réduire
       </label>
       <label>
-        <input type="checkbox" id="reutiliser" name="tags" [checked]="isTagSelected('reutiliser')" value="reutiliser">
+        <input type="checkbox" id="reutiliser" name="tags" [(ngModel)]="reutiliserChecked"
+          [checked]="isTagSelected('reutiliser')" value="reutiliser">
         Réutiliser
       </label>
       <label>
-        <input type="checkbox" id="substituer" name="tags" [checked]="isTagSelected('substituer')" value="substituer">
+        <input type="checkbox" id="substituer" name="tags" [(ngModel)]="substituerChecked"
+          [checked]="isTagSelected('substituer')" value="substituer">
         Substituer
       </label>
     </fieldset>
